[package]
name = "telnyx"
version = "0.1.0"
authors = ["John Ledbetter <john.ledbetter@gmail.com>"]
edition = "2018"
description = "Rust bindings for the Telnyx API"
repository = "https://github.com/ledbettj/telnyx"
license = "MIT"
keywords = ["telnyx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["client", "http1", "http2"] }
hyper-tls = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"

[dev-dependencies]
tokio = { version = "^1.0", features = ["macros"] }
env_logger = "^0.8"
